parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    TYPE

Grammar

Rule 0     S' -> calc
Rule 1     calc -> EXPRESSION
Rule 2     calc -> VAR_ASSIGN
Rule 3     calc -> CONDITION
Rule 4     calc -> WRITE
Rule 5     calc -> PROGRA
Rule 6     calc -> VARS
Rule 7     calc -> epsilon
Rule 8     epsilon -> <empty>
Rule 9     FACTOR -> INT
Rule 10    FACTOR -> FLOAT
Rule 11    FACTOR -> STRING
Rule 12    FACTOR -> ID
Rule 13    EXP -> EXP PLUS EXP
Rule 14    EXP -> EXP MINUS EXP
Rule 15    EXP -> EXP MULT EXP
Rule 16    EXP -> EXP DIV EXP
Rule 17    EXP -> FACTOR
Rule 18    EXP -> LPAR EXPRESSION RPAR
Rule 19    EXP -> MINUS EXP
Rule 20    EXPRESSION -> EXP
Rule 21    EXPRESSION -> EXPRESSION_REL
Rule 22    EXPRESSION_REL -> EXP GT EXP
Rule 23    EXPRESSION_REL -> EXP LT EXP
Rule 24    EXPRESSION_REL -> EXP DT EXP
Rule 25    VAR_ASSIGN -> ID ASSIGN EXPRESSION SEMICOLON
Rule 26    VAR_ASSIGN -> ID ASSIGN ID SEMICOLON
Rule 27    CONDITION -> IF LPAR EXPRESSION_REL RPAR BLOCK
Rule 28    CONDITION -> IF LPAR EXPRESSION_REL RPAR BLOCK ELSE BLOCK
Rule 29    BLOCK -> LBRACE BLOCK_ALT RBRACE
Rule 30    BLOCK_ALT -> STATEMENT BLOCK_ALT
Rule 31    BLOCK_ALT -> epsilon
Rule 32    STATEMENT -> VAR_ASSIGN
Rule 33    STATEMENT -> CONDITION
Rule 34    STATEMENT -> WRITE
Rule 35    WRITE -> PRINT LPAR WRITE_ALT RPAR SEMICOLON
Rule 36    WRITE_ALT -> EXPRESSION
Rule 37    WRITE_ALT -> EXPRESSION COMMA WRITE_ALT
Rule 38    PROGRA -> PROGRAM ID SEMICOLON STATEMENT BLOCK
Rule 39    PROGRA -> PROGRAM ID SEMICOLON VARS BLOCK
Rule 40    VARS -> VAR VARS_ALT
Rule 41    VARS_ALT -> ID IDLIST COLON T_INT VARLIST SEMICOLON
Rule 42    VARS_ALT -> ID IDLIST COLON T_FLOAT VARLIST SEMICOLON
Rule 43    IDLIST -> COMMA ID IDLIST
Rule 44    IDLIST -> epsilon
Rule 45    VARLIST -> VARS_ALT
Rule 46    VARLIST -> epsilon

Terminals, with rules where they appear

ASSIGN               : 25 26
COLON                : 41 42
COMMA                : 37 43
DIV                  : 16
DOT                  : 
DT                   : 24
ELSE                 : 28
FLOAT                : 10
GT                   : 22
ID                   : 12 25 26 26 38 39 41 42 43
IF                   : 27 28
INT                  : 9
LBRACE               : 29
LPAR                 : 18 27 28 35
LT                   : 23
MINUS                : 14 19
MULT                 : 15
PLUS                 : 13
PRINT                : 35
PROGRAM              : 38 39
RBRACE               : 29
RPAR                 : 18 27 28 35
SEMICOLON            : 25 26 35 38 39 41 42
STRING               : 11
TYPE                 : 
T_FLOAT              : 42
T_INT                : 41
VAR                  : 40
error                : 

Nonterminals, with rules where they appear

BLOCK                : 27 28 28 38 39
BLOCK_ALT            : 29 30
CONDITION            : 3 33
EXP                  : 13 13 14 14 15 15 16 16 19 20 22 22 23 23 24 24
EXPRESSION           : 1 18 25 36 37
EXPRESSION_REL       : 21 27 28
FACTOR               : 17
IDLIST               : 41 42 43
PROGRA               : 5
STATEMENT            : 30 38
VARLIST              : 41 42
VARS                 : 6 39
VARS_ALT             : 40 45
VAR_ASSIGN           : 2 32
WRITE                : 4 34
WRITE_ALT            : 35 37
calc                 : 0
epsilon              : 7 31 44 46

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . EXPRESSION
    (2) calc -> . VAR_ASSIGN
    (3) calc -> . CONDITION
    (4) calc -> . WRITE
    (5) calc -> . PROGRA
    (6) calc -> . VARS
    (7) calc -> . epsilon
    (20) EXPRESSION -> . EXP
    (21) EXPRESSION -> . EXPRESSION_REL
    (25) VAR_ASSIGN -> . ID ASSIGN EXPRESSION SEMICOLON
    (26) VAR_ASSIGN -> . ID ASSIGN ID SEMICOLON
    (27) CONDITION -> . IF LPAR EXPRESSION_REL RPAR BLOCK
    (28) CONDITION -> . IF LPAR EXPRESSION_REL RPAR BLOCK ELSE BLOCK
    (35) WRITE -> . PRINT LPAR WRITE_ALT RPAR SEMICOLON
    (38) PROGRA -> . PROGRAM ID SEMICOLON STATEMENT BLOCK
    (39) PROGRA -> . PROGRAM ID SEMICOLON VARS BLOCK
    (40) VARS -> . VAR VARS_ALT
    (8) epsilon -> .
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (22) EXPRESSION_REL -> . EXP GT EXP
    (23) EXPRESSION_REL -> . EXP LT EXP
    (24) EXPRESSION_REL -> . EXP DT EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    ID              shift and go to state 11
    IF              shift and go to state 12
    PRINT           shift and go to state 14
    PROGRAM         shift and go to state 15
    VAR             shift and go to state 16
    $end            reduce using rule 8 (epsilon -> .)
    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21

    calc                           shift and go to state 1
    EXPRESSION                     shift and go to state 2
    VAR_ASSIGN                     shift and go to state 3
    CONDITION                      shift and go to state 4
    WRITE                          shift and go to state 5
    PROGRA                         shift and go to state 6
    VARS                           shift and go to state 7
    epsilon                        shift and go to state 8
    EXP                            shift and go to state 9
    EXPRESSION_REL                 shift and go to state 10
    FACTOR                         shift and go to state 18

state 1

    (0) S' -> calc .



state 2

    (1) calc -> EXPRESSION .

    $end            reduce using rule 1 (calc -> EXPRESSION .)


state 3

    (2) calc -> VAR_ASSIGN .

    $end            reduce using rule 2 (calc -> VAR_ASSIGN .)


state 4

    (3) calc -> CONDITION .

    $end            reduce using rule 3 (calc -> CONDITION .)


state 5

    (4) calc -> WRITE .

    $end            reduce using rule 4 (calc -> WRITE .)


state 6

    (5) calc -> PROGRA .

    $end            reduce using rule 5 (calc -> PROGRA .)


state 7

    (6) calc -> VARS .

    $end            reduce using rule 6 (calc -> VARS .)


state 8

    (7) calc -> epsilon .

    $end            reduce using rule 7 (calc -> epsilon .)


state 9

    (20) EXPRESSION -> EXP .
    (13) EXP -> EXP . PLUS EXP
    (14) EXP -> EXP . MINUS EXP
    (15) EXP -> EXP . MULT EXP
    (16) EXP -> EXP . DIV EXP
    (22) EXPRESSION_REL -> EXP . GT EXP
    (23) EXPRESSION_REL -> EXP . LT EXP
    (24) EXPRESSION_REL -> EXP . DT EXP

    $end            reduce using rule 20 (EXPRESSION -> EXP .)
    RPAR            reduce using rule 20 (EXPRESSION -> EXP .)
    SEMICOLON       reduce using rule 20 (EXPRESSION -> EXP .)
    COMMA           reduce using rule 20 (EXPRESSION -> EXP .)
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    MULT            shift and go to state 24
    DIV             shift and go to state 25
    GT              shift and go to state 26
    LT              shift and go to state 27
    DT              shift and go to state 28


state 10

    (21) EXPRESSION -> EXPRESSION_REL .

    $end            reduce using rule 21 (EXPRESSION -> EXPRESSION_REL .)
    RPAR            reduce using rule 21 (EXPRESSION -> EXPRESSION_REL .)
    SEMICOLON       reduce using rule 21 (EXPRESSION -> EXPRESSION_REL .)
    COMMA           reduce using rule 21 (EXPRESSION -> EXPRESSION_REL .)


state 11

    (25) VAR_ASSIGN -> ID . ASSIGN EXPRESSION SEMICOLON
    (26) VAR_ASSIGN -> ID . ASSIGN ID SEMICOLON
    (12) FACTOR -> ID .

    ASSIGN          shift and go to state 29
    PLUS            reduce using rule 12 (FACTOR -> ID .)
    MINUS           reduce using rule 12 (FACTOR -> ID .)
    MULT            reduce using rule 12 (FACTOR -> ID .)
    DIV             reduce using rule 12 (FACTOR -> ID .)
    GT              reduce using rule 12 (FACTOR -> ID .)
    LT              reduce using rule 12 (FACTOR -> ID .)
    DT              reduce using rule 12 (FACTOR -> ID .)
    $end            reduce using rule 12 (FACTOR -> ID .)


state 12

    (27) CONDITION -> IF . LPAR EXPRESSION_REL RPAR BLOCK
    (28) CONDITION -> IF . LPAR EXPRESSION_REL RPAR BLOCK ELSE BLOCK

    LPAR            shift and go to state 30


state 13

    (18) EXP -> LPAR . EXPRESSION RPAR
    (20) EXPRESSION -> . EXP
    (21) EXPRESSION -> . EXPRESSION_REL
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (22) EXPRESSION_REL -> . EXP GT EXP
    (23) EXPRESSION_REL -> . EXP LT EXP
    (24) EXPRESSION_REL -> . EXP DT EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    EXPRESSION                     shift and go to state 31
    EXP                            shift and go to state 9
    EXPRESSION_REL                 shift and go to state 10
    FACTOR                         shift and go to state 18

state 14

    (35) WRITE -> PRINT . LPAR WRITE_ALT RPAR SEMICOLON

    LPAR            shift and go to state 33


state 15

    (38) PROGRA -> PROGRAM . ID SEMICOLON STATEMENT BLOCK
    (39) PROGRA -> PROGRAM . ID SEMICOLON VARS BLOCK

    ID              shift and go to state 34


state 16

    (40) VARS -> VAR . VARS_ALT
    (41) VARS_ALT -> . ID IDLIST COLON T_INT VARLIST SEMICOLON
    (42) VARS_ALT -> . ID IDLIST COLON T_FLOAT VARLIST SEMICOLON

    ID              shift and go to state 36

    VARS_ALT                       shift and go to state 35

state 17

    (19) EXP -> MINUS . EXP
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    EXP                            shift and go to state 37
    FACTOR                         shift and go to state 18

state 18

    (17) EXP -> FACTOR .

    PLUS            reduce using rule 17 (EXP -> FACTOR .)
    MINUS           reduce using rule 17 (EXP -> FACTOR .)
    MULT            reduce using rule 17 (EXP -> FACTOR .)
    DIV             reduce using rule 17 (EXP -> FACTOR .)
    GT              reduce using rule 17 (EXP -> FACTOR .)
    LT              reduce using rule 17 (EXP -> FACTOR .)
    DT              reduce using rule 17 (EXP -> FACTOR .)
    $end            reduce using rule 17 (EXP -> FACTOR .)
    RPAR            reduce using rule 17 (EXP -> FACTOR .)
    SEMICOLON       reduce using rule 17 (EXP -> FACTOR .)
    COMMA           reduce using rule 17 (EXP -> FACTOR .)


state 19

    (9) FACTOR -> INT .

    PLUS            reduce using rule 9 (FACTOR -> INT .)
    MINUS           reduce using rule 9 (FACTOR -> INT .)
    MULT            reduce using rule 9 (FACTOR -> INT .)
    DIV             reduce using rule 9 (FACTOR -> INT .)
    GT              reduce using rule 9 (FACTOR -> INT .)
    LT              reduce using rule 9 (FACTOR -> INT .)
    DT              reduce using rule 9 (FACTOR -> INT .)
    $end            reduce using rule 9 (FACTOR -> INT .)
    RPAR            reduce using rule 9 (FACTOR -> INT .)
    SEMICOLON       reduce using rule 9 (FACTOR -> INT .)
    COMMA           reduce using rule 9 (FACTOR -> INT .)


state 20

    (10) FACTOR -> FLOAT .

    PLUS            reduce using rule 10 (FACTOR -> FLOAT .)
    MINUS           reduce using rule 10 (FACTOR -> FLOAT .)
    MULT            reduce using rule 10 (FACTOR -> FLOAT .)
    DIV             reduce using rule 10 (FACTOR -> FLOAT .)
    GT              reduce using rule 10 (FACTOR -> FLOAT .)
    LT              reduce using rule 10 (FACTOR -> FLOAT .)
    DT              reduce using rule 10 (FACTOR -> FLOAT .)
    $end            reduce using rule 10 (FACTOR -> FLOAT .)
    RPAR            reduce using rule 10 (FACTOR -> FLOAT .)
    SEMICOLON       reduce using rule 10 (FACTOR -> FLOAT .)
    COMMA           reduce using rule 10 (FACTOR -> FLOAT .)


state 21

    (11) FACTOR -> STRING .

    PLUS            reduce using rule 11 (FACTOR -> STRING .)
    MINUS           reduce using rule 11 (FACTOR -> STRING .)
    MULT            reduce using rule 11 (FACTOR -> STRING .)
    DIV             reduce using rule 11 (FACTOR -> STRING .)
    GT              reduce using rule 11 (FACTOR -> STRING .)
    LT              reduce using rule 11 (FACTOR -> STRING .)
    DT              reduce using rule 11 (FACTOR -> STRING .)
    $end            reduce using rule 11 (FACTOR -> STRING .)
    RPAR            reduce using rule 11 (FACTOR -> STRING .)
    SEMICOLON       reduce using rule 11 (FACTOR -> STRING .)
    COMMA           reduce using rule 11 (FACTOR -> STRING .)


state 22

    (13) EXP -> EXP PLUS . EXP
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    EXP                            shift and go to state 38
    FACTOR                         shift and go to state 18

state 23

    (14) EXP -> EXP MINUS . EXP
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    EXP                            shift and go to state 39
    FACTOR                         shift and go to state 18

state 24

    (15) EXP -> EXP MULT . EXP
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    EXP                            shift and go to state 40
    FACTOR                         shift and go to state 18

state 25

    (16) EXP -> EXP DIV . EXP
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    EXP                            shift and go to state 41
    FACTOR                         shift and go to state 18

state 26

    (22) EXPRESSION_REL -> EXP GT . EXP
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    EXP                            shift and go to state 42
    FACTOR                         shift and go to state 18

state 27

    (23) EXPRESSION_REL -> EXP LT . EXP
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    EXP                            shift and go to state 43
    FACTOR                         shift and go to state 18

state 28

    (24) EXPRESSION_REL -> EXP DT . EXP
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    EXP                            shift and go to state 44
    FACTOR                         shift and go to state 18

state 29

    (25) VAR_ASSIGN -> ID ASSIGN . EXPRESSION SEMICOLON
    (26) VAR_ASSIGN -> ID ASSIGN . ID SEMICOLON
    (20) EXPRESSION -> . EXP
    (21) EXPRESSION -> . EXPRESSION_REL
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (22) EXPRESSION_REL -> . EXP GT EXP
    (23) EXPRESSION_REL -> . EXP LT EXP
    (24) EXPRESSION_REL -> . EXP DT EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    ID              shift and go to state 45
    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21

    EXPRESSION                     shift and go to state 46
    EXP                            shift and go to state 9
    EXPRESSION_REL                 shift and go to state 10
    FACTOR                         shift and go to state 18

state 30

    (27) CONDITION -> IF LPAR . EXPRESSION_REL RPAR BLOCK
    (28) CONDITION -> IF LPAR . EXPRESSION_REL RPAR BLOCK ELSE BLOCK
    (22) EXPRESSION_REL -> . EXP GT EXP
    (23) EXPRESSION_REL -> . EXP LT EXP
    (24) EXPRESSION_REL -> . EXP DT EXP
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    EXPRESSION_REL                 shift and go to state 47
    EXP                            shift and go to state 48
    FACTOR                         shift and go to state 18

state 31

    (18) EXP -> LPAR EXPRESSION . RPAR

    RPAR            shift and go to state 49


state 32

    (12) FACTOR -> ID .

    PLUS            reduce using rule 12 (FACTOR -> ID .)
    MINUS           reduce using rule 12 (FACTOR -> ID .)
    MULT            reduce using rule 12 (FACTOR -> ID .)
    DIV             reduce using rule 12 (FACTOR -> ID .)
    GT              reduce using rule 12 (FACTOR -> ID .)
    LT              reduce using rule 12 (FACTOR -> ID .)
    DT              reduce using rule 12 (FACTOR -> ID .)
    RPAR            reduce using rule 12 (FACTOR -> ID .)
    $end            reduce using rule 12 (FACTOR -> ID .)
    SEMICOLON       reduce using rule 12 (FACTOR -> ID .)
    COMMA           reduce using rule 12 (FACTOR -> ID .)


state 33

    (35) WRITE -> PRINT LPAR . WRITE_ALT RPAR SEMICOLON
    (36) WRITE_ALT -> . EXPRESSION
    (37) WRITE_ALT -> . EXPRESSION COMMA WRITE_ALT
    (20) EXPRESSION -> . EXP
    (21) EXPRESSION -> . EXPRESSION_REL
    (13) EXP -> . EXP PLUS EXP
    (14) EXP -> . EXP MINUS EXP
    (15) EXP -> . EXP MULT EXP
    (16) EXP -> . EXP DIV EXP
    (17) EXP -> . FACTOR
    (18) EXP -> . LPAR EXPRESSION RPAR
    (19) EXP -> . MINUS EXP
    (22) EXPRESSION_REL -> . EXP GT EXP
    (23) EXPRESSION_REL -> . EXP LT EXP
    (24) EXPRESSION_REL -> . EXP DT EXP
    (9) FACTOR -> . INT
    (10) FACTOR -> . FLOAT
    (11) FACTOR -> . STRING
    (12) FACTOR -> . ID

    LPAR            shift and go to state 13
    MINUS           shift and go to state 17
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 32

    WRITE_ALT                      shift and go to state 50
    EXPRESSION                     shift and go to state 51
    EXP                            shift and go to state 9
    EXPRESSION_REL                 shift and go to state 10
    FACTOR                         shift and go to state 18

state 34

    (38) PROGRA -> PROGRAM ID . SEMICOLON STATEMENT BLOCK
    (39) PROGRA -> PROGRAM ID . SEMICOLON VARS BLOCK

    SEMICOLON       shift and go to state 52


state 35

    (40) VARS -> VAR VARS_ALT .

    $end            reduce using rule 40 (VARS -> VAR VARS_ALT .)
    LBRACE          reduce using rule 40 (VARS -> VAR VARS_ALT .)


state 36

    (41) VARS_ALT -> ID . IDLIST COLON T_INT VARLIST SEMICOLON
    (42) VARS_ALT -> ID . IDLIST COLON T_FLOAT VARLIST SEMICOLON
    (43) IDLIST -> . COMMA ID IDLIST
    (44) IDLIST -> . epsilon
    (8) epsilon -> .

    COMMA           shift and go to state 54
    COLON           reduce using rule 8 (epsilon -> .)

    IDLIST                         shift and go to state 53
    epsilon                        shift and go to state 55

state 37
